<resources>
    <string name="app_name">Map_Location</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="home">Home</string>
    <string name="StuName_And_ID">SE/2018/001  Abdullah M.R.M</string>
    <string name="Date">06/04/2022</string>
    <string name="back">Back</string>
    <string name="Course_Title">SENG-22243</string>
    <string name="Course_Name">Mobile Application Development</string>
    <string name="Assignments">Assignments 03</string>
    <string name="Demo">Demo</string>
    <string name="signd">\" - \" signed</string>
    <string name="add">add</string>
    <string name="add_data_from_api">add data from Api</string>
    <string name="create_new_location">create new Location</string>
    <string name="data_from_api">Data from Api</string>
    <string name="create_location">Create Location</string>
    <string name="details">
        city :
        country:
        data:
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>