<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ListFragment05"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.List.ListFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="33dp"
        tools:listitem="@layout/card_view_design">

    </androidx.recyclerview.widget.RecyclerView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:clickable="true"
        android:contentDescription="@string/add"
        android:focusable="true"
        android:src="@drawable/ic_baseline_add_circle_24"
        app:fabCustomSize="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recyclerview"
        app:layout_constraintVertical_bias="0.921"
        app:rippleColor="#FFC107" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fromData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:backgroundTint="#979aaa"
        android:backgroundTintMode="src_in"
        android:clickable="false"
        android:contentDescription="@string/add_data_from_api"
        android:focusable="true"
        android:src="@drawable/ic_add_api"
        android:visibility="invisible"
        app:fabCustomSize="50dp"
        app:layout_constraintBottom_toTopOf="@+id/NewData"
        app:layout_constraintEnd_toEndOf="@+id/NewData"
        app:rippleColor="#FFFFFF" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/deleteAlldeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:backgroundTint="#979aaa"
        android:backgroundTintMode="src_in"
        android:clickable="false"
        android:contentDescription="@string/add_data_from_api"
        android:focusable="true"
        android:src="@drawable/ic_baseline_delete_sweep_24"
        android:visibility="invisible"
        app:fabCustomSize="50dp"
        app:layout_constraintBottom_toTopOf="@+id/fromData"
        app:layout_constraintEnd_toEndOf="@+id/fromData"
        app:rippleColor="#FFFFFF" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/NewData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="#979aaa"
        android:clickable="true"
        android:contentDescription="@string/create_new_location"
        android:focusable="true"
        android:src="@drawable/ic_add"
        android:visibility="invisible"
        app:fabCustomSize="50dp"
        app:layout_constraintBottom_toTopOf="@+id/add"
        app:layout_constraintEnd_toEndOf="@+id/add" />

    <TextView
        android:id="@+id/newDataText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/create_location"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/add"
        app:layout_constraintEnd_toEndOf="@+id/recyclerview"
        app:layout_constraintTop_toBottomOf="@+id/NewData"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/fromDataText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="6dp"
        android:allowClickWhenDisabled="false"
        android:gravity="center"
        android:text="@string/data_from_api"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/NewData"
        app:layout_constraintEnd_toEndOf="@+id/recyclerview"
        app:layout_constraintTop_toBottomOf="@+id/fromData"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>

